# chinese_memo

./: .gitignore  CMakeLists.txt  README.md  autoex.cpp  comp.sh  dl2.sh  download.sh  hsk1.txt  hsk2.txt  hsk3.txt  hun_words_alphabetwq.txt  input.cpp  input.h  input_common.cpp  input_ncurses.cpp  input_sdl2.cpp  main.cpp  main_characters.cpp  main_characters_easy.cpp  main_input.cpp  main_input_notone.cpp  main_questions.cpp  main_questions10.cpp  main_questions10hsk.cpp  main_questions_hun.cpp  questions.cpp  questions.h  questions_20250326.txt  questions_20250414.txt  questions_20250416.txt  questions_20250505.txt  questions_hun.cpp  questions_hun.h  status.txt  status1.txt  status_c.txt  status_c_e.txt  tokenize.cpp  tokenize.h  union_q.txt  (+91 more)
data/: general-standard?page=1  general-standard?page=10  general-standard?page=11  general-standard?page=12  general-standard?page=13  general-standard?page=14  general-standard?page=15  general-standard?page=16  general-standard?page=17  general-standard?page=18  general-standard?page=19  general-standard?page=2  general-standard?page=20  general-standard?page=21  general-standard?page=22  general-standard?page=23  general-standard?page=24  general-standard?page=25  general-standard?page=26  general-standard?page=27  general-standard?page=28  general-standard?page=29  general-standard?page=3  general-standard?page=30  general-standard?page=31  general-standard?page=32  general-standard?page=33  general-standard?page=34  general-standard?page=35  general-standard?page=36  general-standard?page=37  general-standard?page=38  general-standard?page=39  general-standard?page=4  general-standard?page=40  general-standard?page=41  general-standard?page=42  general-standard?page=43  general-standard?page=44  general-standard?page=45  (+42 more)
data2/: 㑇  㑊  㕮  㘎  㙍  㙘  㙦  㛃  㛚  㛹  㟃  㠇  㠓  㤘  㥄  㧐  㧑  㧟  㫰  㬊  㬎  㬚  㭎  㭕  㮾  㰀  㳇  㳘  㳚  㴔  㵐  㶲  㸆  㸌  㺄  㻬  㽏  㿠  䁖  䂮  (+8065 more)
